--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -3,10 +3,13 @@
 @use "./breakpoints" as breakpoint;
 @use "./colours-semantic" as semantic;
 @import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,200..1000;1,200..1000&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+
 
 /// Font Families
-$font-family-heading: Mulish;
-$font-family-body: Mulish;
+$font-family-heading: Mulish, sans-serif;
+$font-family-body: Mulish, sans-serif;
+$font-family-code: 'Roboto Mono', monospace;
 
 /// Font Weights
 $font-weight-strong: 600;
@@ -14,6 +17,10 @@ $font-weight-weak: 400;
 
 body {
   font-family: $font-family-body;
+
+  code {
+    font-family: $font-family-code;
+  }
 }
 
 // Typography map
